--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,24 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+    <aside class="menu">
+        <section class="main-menu">
+            <h1><a href="#">LOGO</a></h1>
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#">Orçamento</a></li>
+                    <li><a href="#">Contado</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
 
     <script src="/assets/js/script.js"></script>
 </body>
+
 </html>
