Criei seção e coloquei imagem de fundo.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         </section>
     </aside>
 
+<section class="home">
+
+</section>
+
+<section class="produto">
+
+</section>
+
+
     <script src="/assets/js/script.js"></script>
 </body>
 
