inclui no fonte para o logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <aside class="menu">
         <section class="main-menu">
-            <h1><a href="#">LOGO</a></h1>
+            <h1><a href="#">Sempre linda</a></h1>
 
             <nav>
                 <ul>
