alterei o fundo do home.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
         </section>
     </aside>
 
-<section class="home">
+<main class="home home-container">
+    <section class="text-home">
+        <h1>Sempre Linda</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repellat, quibusdam, veritatis blanditiis suscipit sed, deleniti tempore iste hic accusantium corrupti impedit quisquam quidem harum voluptates optio eos expedita voluptatum?</p>
+    </section>
+    <div class="img-home">
+        <img src="" alt="">
+    </div>
 
-</section>
+</main>
 
 <section class="produto">
 
