Troquei o section pela DIV para corrigir problema de validação

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <aside class="menu">
-        <section class="main-menu">
+        <div class="main-menu">
             <h1><a href="#">Sempre linda</a></h1>
 
             <nav>
@@ -23,7 +23,7 @@
                     <li><a href="#">Contado</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </aside>
 
 <main class="home home-container">
