coloquei um espaço entre o menu e section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
     </aside>
 
+<div class="space-menu"></div>
+
 <main class="home home-container">
     <section class="text-home">
         <h1>Sempre Linda</h1>
