Alterei o texto, retirei lorem

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <main class="home home-container">
     <section class="text-home">
         <h1>Sempre Linda</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repellat, quibusdam, veritatis blanditiis suscipit sed, deleniti tempore iste hic accusantium corrupti impedit quisquam quidem harum voluptates optio eos expedita voluptatum?</p>
+        <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama produtos de qualidade. </p>
     </section>
     <div class="img-home">
         <img src="" alt="">
