inclui um icone

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Page</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -30,7 +32,7 @@
 
 <main class="home home-container">
     <section class="text-home">
-        <h1>Sempre Linda</h1>
+        <h1>Sempre Linda<i class="far fa-star"></i></h1>
         <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama produtos de qualidade. </p>
     </section>
     <div class="img-home">
