--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 <main class="home home-container">
     <section class="text-home">
         <h1>Sempre Linda<i class="far fa-star"></i></h1>
-        <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama produtos de qualidade. </p>
+        <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama a beleza. </p>
+        <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho!</p>
+
+        <button> Conheça nossos produtos.</button>
     </section>
     <div class="img-home">
-        <img src="" alt="">
+      
     </div>
-
  
 
 </main>
