inclui um botao para ir em produtos

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama a beleza. </p>
         <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho!</p>
 
-        <button> Conheça nossos produtos.</button>
+        <button class="link-produto"> Conheça nossos produtos.</button>
     </section>
+
     <div class="img-home">
       
     </div>
