--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -28,27 +29,26 @@
         </div>
     </aside>
 
-<div class="space-menu"></div>
+    <div class="space-menu"></div>
 
-<main class="home home-container">
-    <section class="text-home">
-        <h1>Sempre Linda<i class="far fa-star"></i></h1>
-        <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama a beleza. </p>
-        <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho!</p>
+    <main class="home home-container">
+        <section class="text-home">
+            <h1>Sempre Linda<i class="far fa-star"></i></h1>
+            <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços
+                atrativos para quem ama a beleza. </p>
+            <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
+                trabalho!</p>
 
-        <button class="link-produto"> Conheça nossos produtos.</button>
+            <button class="link-produto"> Conheça nossos produtos.</button>
+        </section>
+
+        <div class="img-home"></div>
+        
+    </main>
+
+    <section class="produto">
+
     </section>
-
-    <div class="img-home">
-      
-    </div>
- 
-
-</main>
-
-<section class="produto">
-
-</section>
 
 
     <script src="/assets/js/script.js"></script>
