--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     <div class="space-menu"></div>
 
     <main class="home home-container">
-        <section class="text-home">
-            <h1>Sempre Linda<i class="far fa-star"></i></h1>
+        <div class="text-home">
+            <h2>Sempre Linda<i class="far fa-star"></i></h2>
             <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços
                 atrativos para quem ama a beleza. </p>
             <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
                 trabalho!</p>
 
             <button class="link-produto"> Conheça nossos produtos.</button>
-        </section>
+        </div>
 
         <div class="img-home"></div>
-        
+
     </main>
 
     <section class="produto">
-
+        <h2>PRODUTO</h2>
     </section>
 
 
