--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Produtos</a></li>
                     <li><a href="#">Orçamento</a></li>
-                    <li><a href="#">Contado</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </div>
