coloquei link nas paginas do menu

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#produto">Produtos</a></li>
                     <li><a href="#">Orçamento</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
@@ -31,13 +31,13 @@
 
     <div class="space-menu"></div>
 
-    <main class="home home-container">
+    <main id="home" class="home home-container">
         <div class="text-home">
             <h2>Sempre Linda<i class="far fa-star"></i></h2>
             <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços
-                atrativos para quem ama a beleza. </p>
-            <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
-                trabalho!</p>
+            atrativos para quem ama a beleza. </p>
+            <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho!</p>
+           
 
             <button class="link-produto"> Conheça nossos produtos.</button>
         </div>
@@ -46,7 +46,7 @@
 
     </main>
 
-    <section class="produto">
+    <section id="produto" class="produto" >
         <h2>PRODUTO</h2>
     </section>
 
