criando a extrutura do produto

--- a/index.html
+++ b/index.html
@@ -43,12 +43,22 @@
         </div>
 
         <div class="img-home"></div>
-
+      
     </main>
 
-    <section id="produto" class="produto" >
-        <h2>PRODUTO</h2>
-    </section>
+       
+    <main id="produto" class="produto" >
+        <header class="topo-produto">
+            <h2>AQUI VAI ALGUMA COISA</h2>
+        </header>
+        <section class="container-img-produtos">
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+        </section>
+    </main>    
 
 
     <script src="/assets/js/script.js"></script>
