--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
         </header>
         <section class="container-img-produtos">
             <ul>
-                <li><a href="#"><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml__V_743.jpg" alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
+                <li class="img1"><a href="#"><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml__V_743.jpg" alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="#"><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.jpg" alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
+                <li class="img2"><a href="#"><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.jpg" alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="#"><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g__Ro_525.jpg" alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
+                <li class="img3"><a href="#"><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g__Ro_525.jpg" alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="#"><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic__75ml_485.jpg" alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
+                <li class="img4"><a href="#"><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic__75ml_485.jpg" alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="#"><img src="assets/img/img-produtos/Passo_a_Passo_renovada.jpg" alt="Passo_a_Passo_renovada"></a>
+                <li class="img5"><a href="#"><img src="assets/img/img-produtos/Passo_a_Passo_renovada.jpg" alt="Passo_a_Passo_renovada"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="#"><img src="assets/img/img-produtos/Quarteto_de_sombras_Metálico MATTE_5g.jpg" alt="Quarteto_de_sombras_Metálico MATTE_5g"></a>
+                <li class="img6"><a href="#"><img src="assets/img/img-produtos/Quarteto_de_sombras_Metálico MATTE_5g.jpg" alt="Quarteto_de_sombras_Metálico MATTE_5g"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="#"><img src="assets/img/img-produtos/Serum_Antirrugas_Renew_Restaur_926.jpg" alt="Serum_Antirrugas_Renew_Restaur_926"></a>
+                <li class="img7"><a href="#"><img src="assets/img/img-produtos/Serum_Antirrugas_Renew_Restaur_926.jpg" alt="Serum_Antirrugas_Renew_Restaur_926"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
-                <li><a href="/"><img src="assets/img/img-produtos/NightOrchid_Capa.jpg" alt="NightOrchid_Capa"></a>
+                <li class="img8"><a href="/"><img src="assets/img/img-produtos/NightOrchid_Capa.jpg" alt="NightOrchid_Capa"></a>
                     <h2>Esmalte Pro Color 10ml</h2>
                     <p>R$ 25,90</p>
                 </li>
