--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
         </section>
     </main>
 
-    <section class="rolagem">
-        <h2>teste</h2>
+    <section class="container-produtos-2">
 
     </section>
 
