--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </main>
 
     <section class="container-produtos-2">
-
+        <h2>teste</h2>
     </section>
 
     <script src="/assets/js/script.js"></script>
