--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
             </header>
 
 
-            <div class="img1"><a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml__V_743.jpg" alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
+            <div class="img1"><a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml_V_743.png" alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
                 <h2>Esmalte Pro Color 10ml</h2>
                 <p>R$ 25,90</p>
             </div>
-            <div class="img2"><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.jpg" alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
+            <div class="img2"><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png" alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
                 <h2>Base liquida Avon Power Stay</h2>
                 <p>R$ 52,90</p>
             </div>
-            <div class="img3"><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g__Ro_525.jpg" alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
+            <div class="img3"><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png" alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
                 <h2>Batom Mattelizado 36g</h2>
                 <p>R$ 49,90</p>
             </div>
-            <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic__75ml_485.jpg" alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
+            <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png" alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
                 <h2>Deo Colônia Surreal Magic 75ml</h2>
                 <p>R$ 109,90</p>
             </div>
-            <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.jpg" alt="Passo_a_Passo_renovada"></a>
+            <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png" alt="Passo_a_Passo_renovada"></a>
                 <h2>Passo a passo renovada</h2>
                 <p>R$ 99,90</p>
             </div>
-            <div class="img6"><a href=""><img src="assets/img/img-produtos/Quarteto_de_sombras_Metalico_MATTE_5g.jpg" alt="Quarteto_de_sombras_Metálico MATTE_5g"></a>
+            <div class="img6"><a href=""><img src="assets/img/img-produtos/Quarteto_de_sombras_Metalico_MATTE_5g.png" alt="Quarteto_de_sombras_Metálico MATTE_5g"></a>
                 <h2>Quarteto de sambras metálico MATTE 5g</h2>
                 <p>R$ 52,90</p>
             </div>
-            <div class="img7"><a href=""><img src="assets/img/img-produtos/Serum_Antirrugas_Renew_Restaur_926.jpg" alt="Serum_Antirrugas_Renew_Restaur_926"></a>
+            <div class="img7"><a href=""><img src="assets/img/img-produtos/Serum_Antirrugas_Renew_Restaur_926.png" alt="Serum_Antirrugas_Renew_Restaur_926"></a>
                 <h2>Serum Antirrugas Renew restaurador</h2>
                 <p>R$ 65,90</p>
             </div>
-            <div class="img8"><a href=""><img src="assets/img/img-produtos/NightOrchid_Capa.jpg" alt="NightOrchid_Capa"></a>
+            <div class="img8"><a href=""><img src="assets/img/img-produtos/NightOrchid_Capa.png" alt="NightOrchid_Capa"></a>
                 <h2>NightOrchid</h2>
                 <p>R$ 82,90</p>
             </div>
