melhorei o código do css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <button class="link-produto"> Conheça nossos produtos.</button>
         </div>
 
-        <div class="img-home"></div>
+        <div class="img-home">
+            <img src="./assets/img/img-make.svg" alt="Um homem maqueando uma mulher que esta sentada em uma cadeira e ao lado tem flores">
+        </div>
 
     </section>
 
