melhorando o código css

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
                 trabalho!</p>
 
-
-            <button class="link-produto"> Conheça nossos produtos.</button>
+            <a href="#produto" class="link-produto"> Conheça nossos produtos.</a>
         </div>
 
         <div class="img-home">
