--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="text-home">
             <h2>Sempre Linda<i class="far fa-star"></i></h2>
             <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços
-                atrativos para quem ama a beleza. </p>
-            <p>A satisfação de nossos cliente vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
-                trabalho!</p>
+            atrativos para quem ama a beleza. </p>
+            <p>Revendemos produtos de qualidade com preços baixos e a pronta-entrega.</p>
+            <p>A satisfação de nossos clientes vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho e produtos!</p>
 
             <a href="#produto" class="link-produto"> Conheça nossos produtos.</a>
         </div>
