--- a/index.html
+++ b/index.html
@@ -35,47 +35,70 @@
         <div class="text-home">
             <h2>Sempre Linda<i class="far fa-star"></i></h2>
             <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços
-            atrativos para quem ama a beleza. </p>
+                atrativos para quem ama a beleza. </p>
             <p>Revendemos produtos de qualidade com preços baixos e a pronta-entrega.</p>
-            <p>A satisfação de nossos clientes vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho e produtos!</p>
+            <p>A satisfação de nossos clientes vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
+                trabalho e produtos!</p>
 
             <a href="#produto" class="link-produto"> Conheça nossos produtos.</a>
         </div>
 
         <div class="img-home">
-            <img src="./assets/img/img-make.svg" alt="Um homem maqueando uma mulher que esta sentada em uma cadeira e ao lado tem flores">
+            <img src="./assets/img/img-make.svg"
+                alt="Um homem maqueando uma mulher que esta sentada em uma cadeira e ao lado tem flores">
         </div>
 
     </section>
 
     <main id="produto" class="container-produtos">
-        
-            <header class="topo-produto">
-                <h3 class="titulo-topo">Os mais vendidos pra você levar agora:</h3>
-            </header>
-            <section class="produto">
 
-            <div class="img1"><a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml_V_743.png" alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
-                <h2>Esmalte Pro Color 10ml</h2>
-                <p>R$ 25,90</p>
+        <header class="topo-produto">
+            <h3 class="titulo-topo">Os mais vendidos pra você levar agora:</h3>
+        </header>
+
+        <section class="produto">
+
+            <div class="img1"><a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml_V_743.png"         alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
+                <div class="descricao-produto">
+                    <h2>Esmalte Pro Color 10ml</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 25,90</p>
+                </div>
             </div>
-            <div class="img2"><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png" alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
-                <h2>Base liquida Avon Power Stay</h2>
-                <p>R$ 52,90</p>
+            <div class="img2"><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png"          alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
+                <div class="descricao-produto">
+                    <h2>Base liquida Avon Power Stay</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 52,90</p>
+                </div>
             </div>
-            <div class="img3"><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png" alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
-                <h2>Batom Mattelizado 36g</h2>
-                <p>R$ 49,90</p>
+            <div class="img3"><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png"        alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
+                <div class="descricao-produto">
+                    <h2>Batom Mattelizado 36g</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 49,90</p>
+                </div>
             </div>
-            <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png" alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
-                <h2>Deo Colônia Surreal Magic 75ml</h2>
-                <p>R$ 109,90</p>
+            <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png"              alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
+                <div class="descricao-produto">
+                    <h2>Deo Colônia Surreal Magic 75ml</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 109,90</p>
+                </div>
             </div>
-            <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png" alt="Passo_a_Passo_renovada"></a>
+            <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                <div class="descricao-produto"></div>
                 <h2>Passo a passo renovada</h2>
+            </div>
+            <div class="valor-produto">
                 <p>R$ 99,90</p>
             </div>
-            
+            </div>
+
         </section>
     </main>
 
