coloquei efeito nas imagens, melhorando css

--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
     <section id="home" class="home home-container">
         <div class="text-home">
             <h2>Sempre Linda<i class="far fa-star"></i></h2>
-            <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços
-                atrativos para quem ama a beleza. </p>
+            <p>Sempre linda revendedora Avon, nasceu em 2001 com o objetivo de ter produtos de qualidade e preços atrativos para quem ama a beleza. </p>
             <p>Revendemos produtos de qualidade com preços baixos e a pronta-entrega.</p>
-            <p>A satisfação de nossos clientes vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso
-                trabalho e produtos!</p>
+            <p>A satisfação de nossos clientes vem em primeiro lugar, queremos que todos fiquem satisfeitos com nosso trabalho e produtos!</p>
 
             <a href="#produto" class="link-produto"> Conheça nossos produtos.</a>
         </div>
@@ -84,14 +82,14 @@
             </div>
             <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png"              alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
                 <div class="descricao-produto">
-                    <h2>Deo Colônia Surreal Magic 75ml</h2>
+                    <h2>Deo Col Surreal Magic 75ml</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 109,90</p>
                 </div>
             </div>
             <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
-                <div class="descricao-produto"></div>
+                <div class="descricao-produto">
                 <h2>Passo a passo renovada</h2>
             </div>
             <div class="valor-produto">
