inclui bom de compra

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <div class="valor-produto">
                     <p>R$ 25,90</p>
                 </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
             </div>
             <div class="img2"><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png"          alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
                 <div class="descricao-produto">
@@ -71,6 +74,10 @@
                 <div class="valor-produto">
                     <p>R$ 52,90</p>
                 </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                
             </div>
             <div class="img3"><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png"        alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
                 <div class="descricao-produto">
@@ -78,6 +85,9 @@
                 </div>
                 <div class="valor-produto">
                     <p>R$ 49,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
                 </div>
             </div>
             <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png"              alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
@@ -87,6 +97,9 @@
                 <div class="valor-produto">
                     <p>R$ 109,90</p>
                 </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
             </div>
             <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
                 <div class="descricao-produto">
@@ -94,6 +107,9 @@
             </div>
             <div class="valor-produto">
                 <p>R$ 99,90</p>
+            </div>
+            <div class="link-compra-mais-vendido">
+                <a href="#">COMPRAR</a>
             </div>
             </div>
 
