--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
         <section class="produto">
 
-            <div class="img1"><a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml_V_743.png"         alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
+            <div class="img1">
+                <div class="list-desejo">
+                    <a href="#"><i class="far fa-heart"></i></div></a>
+                <a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml_V_743.png"         alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
                 <div class="descricao-produto">
                     <h2>Esmalte Pro Color 10ml</h2>
                 </div>
@@ -67,7 +70,9 @@
                     <a href="#">COMPRAR</a>
                 </div>
             </div>
-            <div class="img2"><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png"          alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
+            <div class="img2">
+                <div class="list-desejo">
+                    <a href="#"><i class="far fa-heart"></i></div></a><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png"          alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
                 <div class="descricao-produto">
                     <h2>Base liquida Avon Power Stay</h2>
                 </div>
@@ -79,7 +84,9 @@
                 </div>
                 
             </div>
-            <div class="img3"><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png"        alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
+            <div class="img3">
+                <div class="list-desejo">
+                    <a href="#"><i class="far fa-heart"></i></div></a><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png"        alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
                 <div class="descricao-produto">
                     <h2>Batom Mattelizado 36g</h2>
                 </div>
@@ -90,7 +97,9 @@
                     <a href="#">COMPRAR</a>
                 </div>
             </div>
-            <div class="img4"><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png"              alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
+            <div class="img4">
+                <div class="list-desejo">
+                    <a href="#"><i class="far fa-heart"></i></div></a><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png"              alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
                 <div class="descricao-produto">
                     <h2>Deo Col Surreal Magic 75ml</h2>
                 </div>
@@ -101,7 +110,10 @@
                     <a href="#">COMPRAR</a>
                 </div>
             </div>
-            <div class="img5"><a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+            <div class="img5">
+                <div class="list-desejo">
+                    <a href="#"><i class="far fa-heart"></i></div></a>
+                <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
                 <div class="descricao-produto">
                 <h2>Passo a passo renovada</h2>
             </div>
