criei outra seção de produtos.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,119 @@
             </div>
 
         </section>
+
+        <section class="selecao-produtos">
+            <header class="topo-produto">
+                <h3 class="titulo-topo">O que você procura esta aqui:</h3>
+            </header>
+
+        <section class="container-selecao-produtos">
+            <aside class="menu-produtos">
+                <nav class="menu-nav">
+                    <ul>
+                        <li><a href="#">Categorias</a></li>
+                        <li><a href="#">Categorias</a></li>
+                        <li><a href="#">Categorias</a></li>
+                        <li><a href="#">Categorias</a></li>
+                        <li><a href="#">Categorias</a></li>
+                        <li><a href="#">Categorias</a></li>
+                        <li><a href="#">Categorias</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            
+                <div class="img1-selecao">
+                    <div class="list-desejo">
+                        <a href="#"><i class="far fa-heart"></i></div></a>
+                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <div class="descricao-produto">
+                    <h2>Passo a passo renovada</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 99,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                </div>
+
+                <div class="img2-selecao">
+                    <div class="list-desejo">
+                        <a href="#"><i class="far fa-heart"></i></div></a>
+                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <div class="descricao-produto">
+                    <h2>Passo a passo renovada</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 99,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                </div>
+
+                <div class="img3-selecao">
+                    <div class="list-desejo">
+                        <a href="#"><i class="far fa-heart"></i></div></a>
+                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <div class="descricao-produto">
+                    <h2>Passo a passo renovada</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 99,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                </div>
+
+                <div class="img4-selecao">
+                    <div class="list-desejo">
+                        <a href="#"><i class="far fa-heart"></i></div></a>
+                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <div class="descricao-produto">
+                    <h2>Passo a passo renovada</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 99,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                </div>
+
+                <div class="img5-selecao">
+                    <div class="list-desejo">
+                        <a href="#"><i class="far fa-heart"></i></div></a>
+                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <div class="descricao-produto">
+                    <h2>Passo a passo renovada</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 99,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                </div>
+
+                <div class="img6-selecao">
+                    <div class="list-desejo">
+                        <a href="#"><i class="far fa-heart"></i></div></a>
+                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <div class="descricao-produto">
+                    <h2>Passo a passo renovada</h2>
+                </div>
+                <div class="valor-produto">
+                    <p>R$ 99,90</p>
+                </div>
+                <div class="link-compra-mais-vendido">
+                    <a href="#">COMPRAR</a>
+                </div>
+                </div>
+        </section>    
+
+        </section>
     </main>
 
     <section class="container-produtos-2">
