--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
 
         <section class="container-selecao-produtos">
             <aside class="menu-produtos">
+                <div class="categoria">
+                <h3>Categorias</h3>
+                </div>
                 <nav class="menu-nav">
                     <ul>
                         <li><a href="#">Categorias</a></li>
