alterei as imagens

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 <div class="img1-selecao">
                     <div class="list-desejo">
                         <a href="#"><i class="far fa-heart"></i></div></a>
-                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <a href=""><img src="assets/img/img-o-que-voce-procura/Footworks_Creme_Desodorante_de_174.png"           alt="Footworks_Creme_Desodorante_de_174"></a>
                     <div class="descricao-produto">
-                    <h2>Passo a passo renovada</h2>
+                    <h2>Creme desodorante</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 99,90</p>
@@ -168,9 +168,9 @@
                 <div class="img2-selecao">
                     <div class="list-desejo">
                         <a href="#"><i class="far fa-heart"></i></div></a>
-                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <a href=""><img src="assets/img/img-o-que-voce-procura/Luvas_de_Silicone_Creme_Protet_393.png"                 alt="Luvas_de_Silicone_Creme_Protet_393"></a>
                     <div class="descricao-produto">
-                    <h2>Passo a passo renovada</h2>
+                    <h2>Luvas de silicone</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 99,90</p>
@@ -183,9 +183,9 @@
                 <div class="img3-selecao">
                     <div class="list-desejo">
                         <a href="#"><i class="far fa-heart"></i></div></a>
-                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <a href=""><img src="assets/img/img-o-que-voce-procura/Mascara_Extra_Volume_Power_Sta_648.png"                 alt="Mascara_Extra_Volume_Power_Sta_648"></a>
                     <div class="descricao-produto">
-                    <h2>Passo a passo renovada</h2>
+                    <h2>Mascara extra volume</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 99,90</p>
@@ -198,9 +198,9 @@
                 <div class="img4-selecao">
                     <div class="list-desejo">
                         <a href="#"><i class="far fa-heart"></i></div></a>
-                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <a href=""><img src="assets/img/img-o-que-voce-procura/Mascara_para_Clios_Supershock__332.png"                 alt="Mascara_para_Clios_Supershock__332"></a>
                     <div class="descricao-produto">
-                    <h2>Passo a passo renovada</h2>
+                    <h2>Mascara para cílios</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 99,90</p>
@@ -213,9 +213,9 @@
                 <div class="img5-selecao">
                     <div class="list-desejo">
                         <a href="#"><i class="far fa-heart"></i></div></a>
-                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <a href=""><img src="assets/img/img-o-que-voce-procura/Petit_Attitude_180.png"                 alt="Petit_Attitude_180"></a>
                     <div class="descricao-produto">
-                    <h2>Passo a passo renovada</h2>
+                    <h2>Patit Attitude</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 99,90</p>
@@ -228,9 +228,9 @@
                 <div class="img6-selecao">
                     <div class="list-desejo">
                         <a href="#"><i class="far fa-heart"></i></div></a>
-                    <a href=""><img src="assets/img/img-produtos/Passo_a_Passo_renovada.png"                 alt="Passo_a_Passo_renovada"></a>
+                    <a href=""><img src="assets/img/img-o-que-voce-procura/Segno_Visionary_Eau_de_Parfum__509.png"                 alt="Segno_Visionary_Eau_de_Parfum"></a>
                     <div class="descricao-produto">
-                    <h2>Passo a passo renovada</h2>
+                    <h2>Perfume segno visionary</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 99,90</p>
