fazendo a parte de se cadastrar

--- a/index.html
+++ b/index.html
@@ -224,8 +224,20 @@
                 </div>
                 </div>
         </section>    
-
         </section>
+
+        <section class="radape-cadastro">
+            <div class="info-cadastro">
+            <h2>Fique por dentro!</h2>
+            <h3>Cadastre-se para ficar por dentro das novidades.</h3>
+            </div>
+            <nav class="form-cadastro">
+                <input type="text" name="nome" id="nome">
+                <input type="email" name="e-mail" id="e-mail">
+                <button>Cadastrar</button>
+            </nav>
+        </section>
+        
     </main>
 
     <section class="container-produtos-2">
