criei a parte de cadastro

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#produto">Produtos</a></li>
-                    <li><a href="#">Orçamento</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#cadastro">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -226,23 +225,20 @@
         </section>    
         </section>
 
-        <section class="radape-cadastro">
+        <section class="radape-cadastro" id="cadastro">
             <div class="info-cadastro">
             <h2>Fique por dentro!</h2>
             <h3>Cadastre-se para ficar por dentro das novidades.</h3>
             </div>
             <nav class="form-cadastro">
-                <input type="text" name="nome" id="nome">
-                <input type="email" name="e-mail" id="e-mail">
-                <button>Cadastrar</button>
+                <input type="text" name="nome" id="nome" placeholder="Nome">
+                <input type="email" name="e-mail" id="e-mail" placeholder="E-mail">
+                <button>CADASTRAR</button>
             </nav>
         </section>
         
     </main>
 
-    <section class="container-produtos-2">
-        <h2>teste</h2>
-    </section>
 
     <script src="/assets/js/script.js"></script>
 </body>
